# ROD

./: .gitignore  README.md  ROD_Endpraesentation_Final.pptx  grad_umstellung.md  imgui.ini
SCARA_4/: CMakeLists.txt  package.xml
SCARA_4/config/: scara_controller.yaml  scara_controller_joints.yaml  scara_controller_manager.yaml
SCARA_4/launch/: display.launch  gazebo.launch  gz.launch.py  launch_scara.py
SCARA_4/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  tool.STL
SCARA_4/urdf/: SCARA_4.csv  SCARA_4.urdf  SCARA_test.urdf  _SCARA_4.urdf
SolidWorks/Conveyor/: Conveyor.SLDPRT
SolidWorks/Toaster/: Assembly.SLDASM  FixiereinheitAssembly.SLDASM  ToasterAssembly.SLDASM
SolidWorks/Toaster/Parts/: Column_Fixiereinheit.SLDPRT  Fixiereinheit.SLDPRT  Innen.SLDPRT  Schraube.SLDPRT  Shell.SLDPRT
SolidWorks/robot_arm_6dof/: assembly.SLDASM  robot_arm_6dof_assembly.SLDASM
SolidWorks/robot_arm_6dof/Parts/: 1Base.SLDPRT  2Link0.SLDPRT  3Link1.SLDPRT  4Link2.SLDPRT  5Link3.SLDPRT  6Link4.SLDPRT  7ToolFlange.SLDPRT  8Tool.SLDPRT  column_robot_arm_6dof.SLDPRT  ~$6Link4.SLDPRT
SolidWorks/robot_arm_6dof/robot_arm_6dof_assembly/: CMakeLists.txt  package.xml
SolidWorks/robot_arm_6dof/robot_arm_6dof_assembly/launch/: gazebo.launch  launch_robot.py
SolidWorks/robot_arm_6dof/robot_arm_6dof_assembly/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_5.STL
SolidWorks/robot_arm_6dof/robot_arm_6dof_assembly/urdf/: _robot_arm_6dof_assembly.urdf
SolidWorks/scara/: Base.SLDPRT  SCARA.SLDASM  Teil1.SLDPRT  Teil2.SLDPRT  Teil3.SLDPRT  Teil4.SLDPRT  Werkzeug.SLDPRT
arm_moveit/: package.xml
arm_moveit/config/: joint_limits.yaml  knickarm_6dof.ros2_control.xacro  knickarm_6dof.urdf.xacro  moveit.rviz  moveit_controllers.yaml
arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
robot_arm_6dof_assembly/: CMakeLists.txt  package.xml
robot_arm_6dof_assembly/config/: arm_controller.yaml  arm_controller_joints.yaml  arm_controller_manager.yaml
robot_arm_6dof_assembly/launch/: display.launch  gz.launch.py  launch_robot.py
robot_arm_6dof_assembly/meshes/: link_4.STL  tool.STL
robot_arm_6dof_assembly/urdf/: robot_arm_6dof_assembly.csv  robot_arm_6dof_assembly.urdf  robot_test.urdf
robot_arm_6dof_assembly_moveit/: .setup_assistant  package.xml
robot_arm_6dof_assembly_moveit/config/: initial_positions.yaml  joint_limits.yaml  knickarm_6dof.srdf  knickarm_6dof.urdf.xacro  ros2_controllers.yaml
robot_arm_6dof_assembly_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py  warehouse_db.launch.py
rod_cell/: CMakeLists.txt  package.xml
rod_cell/launch/: cell.launch.py  cell_visual.launch.py
rod_demo/: CMakeLists.txt  package.xml
rod_demo/config/: kinematics_ros2.yaml
rod_demo/launch/: arm_demo.launch.py
rod_demo/src/: arm_demo.cpp  scara_demo.cpp
rod_hmi/: CMakeLists.txt  package.xml  rod_poses.csv
rod_hmi/src/: rod_hmi.cpp
rod_scene/: CMakeLists.txt  package.xml
rod_scene/meshes/: Conveyor.glb  FenceDoor-2.glb  FenceDoor.glb  FenceEast-2.glb  FenceEast.glb  FenceNorth_East-2.glb  FenceNorth_East.glb  FenceNorth_Gap1_Top.glb  FenceNorth_Gap2_Top.glb  FenceNorth_Mid.glb  FenceNorth_West.glb  FencePost.glb  FenceSouth_East.glb  FenceSouth_West-2.glb  FenceSouth_West.glb  FenceWest_Lower.glb  FenceWest_Upper.glb  FixiereinheitAssembly.glb  Schraube.glb  Schutzzaun.glb  Schutzzaun_Tuer.glb  ToasterAssembly.glb  ToasterInnen.glb  ToasterShell.glb  column_robot_arm_6dof.glb
scara_moveit/: package.xml
scara_moveit/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  scara.ros2_control.xacro  scara.srdf  scara.urdf.xacro
scara_moveit/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scara_moveit/install/scara_moveit/share/ament_index/resource_index/package_run_dependencies/: scara_moveit
scara_moveit/install/scara_moveit/share/ament_index/resource_index/parent_prefix_path/: scara_moveit
scara_moveit/install/scara_moveit/share/scara_moveit/: .setup_assistant  package.ps1  package.sh
scara_moveit/install/scara_moveit/share/scara_moveit/config/: initial_positions.yaml  joint_limits.yaml  scara.srdf
scara_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py
scara_moveit/log/: latest_build
