<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_6dof_assembly</name>
  <version>0.0.1</version>
  <description>6DOF robot arm URDF</description>
  <maintainer email="raini@todo.todo">raini</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
