<?xml version="1.0"?>
<package format="3">
  <name>rod_demo</name>
  <version>0.0.1</version>
  <description>Demo scripts for ROD robot cell — Posen anfahren</description>
  <maintainer email="raini@todo.todo">Raini</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
