<?xml version="1.0"?>
<package format="3">
  <name>rod_hmi</name>
  <version>0.0.1</version>
  <description>HMI for ROD robot cell — GUI to control arm and SCARA</description>
  <maintainer email="raini@todo.todo">Raini</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>gz-transport13</depend>
  <depend>gz-msgs10</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
