<?xml version="1.0"?>
<package format="3">
  <name>rod_scene</name>
  <version>0.0.1</version>
  <description>Scene objects for ROD cell</description>
  <maintainer email="raini@todo.todo">Rainhard Wipp</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
